# BS-SOLCTRA-StarPU

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake
configurations/: mpcdf_run  run.sh  run_base.slurm  run_c.sh
main/: CMakeLists.txt
main/inc/: solctra_multinode.h  utils.h
main/include/: argument_parsers.h  constants.h  cpu_functions.h  gpu_functions.h  solctra.h  solctra_cuda.cuh  solctra_multinode.h  utils.h
main/src/: argument_parsers.c  argument_parsers.cpp  cpu_functions.c  gpu_functions.cu  main.c  main_multinode.cpp  main_multinode.cu  solctra.c  solctra_cuda.cu  solctra_multinode.cpp  utils.c  utils.cpp
